add icons refresh job
